--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Zac Haluza",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
