--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongoose": "^5.9.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -28,6 +30,7 @@
     "concurrently": "^5.1.0",
     "css-loader": "^3.4.2",
     "nodemon": "^2.0.2",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
