--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
