--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development nodemon server/server.js & webpack-dev-server --open"
+    "dev:start": "NODE_ENV=development nodemon server/server.js & webpack-dev-server --open"
   },
   "author": "Zac Haluza",
   "license": "ISC",
