--- a/package.json
+++ b/package.json
@@ -4,26 +4,18 @@
   "description": "An interactive visualizer for learning and experimenting with CSS features.",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev:start": "NODE_ENV=development nodemon server/server.js & webpack-dev-server --open"
+    "dev:start": "NODE_ENV=development webpack-dev-server --open"
   },
   "author": "Zac Haluza",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-color": "^2.18.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -31,7 +23,6 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
-    "nodemon": "^2.0.2",
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
