--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An interactive visualizer for learning and experimenting with CSS features.",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "node server/server.js",
+    "build": "NODE_ENV=PRODUCTION webpack",
+    "dev:start": "NODE_ENV=development webpack-dev-server --open & nodemon server/server.js"
   },
   "author": "Zac Haluza",
   "license": "ISC",
