--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-color": "^2.18.0",
